# sortmerna

./: .gitignore  .travis.yml  3rdparty.jinja  AUTHORS  BUILD.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING  ChangeLog  Dockerfile  Doxyfile  Makefile  Makefile.am  Makefile.in  README  README.md  SortMeRNA-User-Manual-2.0.tex  SortMeRNA-User-Manual.tex  _autotools_batch_.sh  _create_missing.sh  aclocal-1.14  build.cmd  build.sh  conda_build_env.yaml  conda_run_env.yaml  configure  configure.ac  copyright.tmpl  doxygen_configure.txt  indexdb_rna.1  setup.py  sortmerna.1
.github/workflows/: build_linux.yml  build_multi_platform.yml  build_osx.yml  build_windows.yml
alp/: gumbel_params.cpp  gumbelparams_app.t.cpp  njn_dynprogproblim.cpp  njn_dynprogprobproto.cpp  njn_function.hpp  njn_integer.hpp  njn_ioutil.hpp  njn_localmaxstat.cpp  njn_localmaxstat.hpp  njn_localmaxstatmatrix.hpp  njn_localmaxstatutil.cpp  njn_matrix.cpp  njn_root.hpp  njn_stringutil.cpp  njn_stringutil.hpp  njn_uniform.hpp  njn_vector.hpp  random_param.txt  sls_alp.cpp  sls_alp_regression.cpp  sls_alp_regression.hpp  sls_alp_sim.cpp  sls_alp_sim.hpp  sls_basic.cpp
alp/.deps/: gumbel_params.Po  njn_dynprogprob.Po  njn_dynprogproblim.Po  njn_dynprogprobproto.Po  njn_ioutil.Po  njn_localmaxstat.Po  njn_localmaxstatmatrix.Po  njn_localmaxstatutil.Po  njn_random.Po  sls_alp.Po  sls_alp_data.Po  sls_alp_regression.Po  sls_alp_sim.Po  sls_pvalues.Po
cmake/: conda_tc.cmake  sortmernaConfig.cmake.in
cmake/modules/: FindRapidJson.cmake  smr_utils.cmake
cmake/presets/: CMakePresets_rocksdb.json
cmph/: brz.c  cmph.c  fch_buckets.c
cmph/.deps/: bdz.Po  bdz_ph.Po  bmz.Po  bmz8.Po  brz.Po  buffer_entry.Po  buffer_manager.Po  chd.Po  chd_ph.Po  chm.Po  cmph.Po  cmph_structs.Po  compressed_rank.Po  compressed_seq.Po  fch.Po  fch_buckets.Po  graph.Po  hash.Po  jenkins_hash.Po  miller_rabin.Po  select.Po  vqueue.Po  vstack.Po
data/: ref_short_seqs.fasta  set4_mate_pairs_metatranscriptomics_1.fastq  t0_expected_alignment.blast  test_read.fasta  test_ref.fasta
data/rRNA_databases/: README.txt  silva-arc-16s-id95.fasta  silva-arc-23s-id98.fasta
dnanexus/: README.md
docs/: building.rst  conf.py  contributors.rst  databases.rst  index.rst  installation.rst  manual4.0.rst  statistics.rst  trace4.0.1.rst  trace4.3.2.rst  usage.rst
docs/img/: smr_1_arch.graphml  smr_3_processing_pipeline.graphml
docs/source/: index.rst
docs/traces/: smr_build_on_ubuntu16_asset.md  smr_run_on_ubuntu16.md
docs/web/: index.html
include/: ThreadPool.hpp  alignment.hpp  alignment2.hpp  baserec.hpp  bitvector.hpp  build_version.h  cmd.hpp  common.hpp  config.h  config.h.in  gzip.hpp  index.hpp  indexdb.hpp  izlib.hpp  kseq.h  kseq_load.hpp  kvdb.hpp  load_index.hpp  loadgenome.hpp  minoccur.hpp  mmap.hpp  options.hpp  otumap.h  output.hpp  outputformats.hpp  paralleltraversal.hpp  processor.hpp  read.hpp  read_control.hpp  reader.hpp  readfeed.hpp  readfile.h  readsfile.hpp  readsqueue.hpp  readstate.h  readstats.hpp  references.hpp  refstats.hpp  report.h  report_biom.h  (+13 more)
m4/: ax_check_zlib.m4
rRNA_databases/: rfam-5.8s-database-id98.fasta
rRNA_databases/scripts/: edit_U_to_T_rna.py  generate_databases.sh
scripts/: build.jinja.yaml  build.py  build.yaml  env.jinja  env.jinja.yaml  env.yaml  merge-paired-reads.sh  run.py  t18.jinja  t18_1.jinja  t19.jinja  t19_1.jinja  t19_3.jinja  t19_5.jinja  t19_6.jinja  t19_7.jinja  t20.jinja  t20_1.jinja  t20_5.jinja  t20_6.jinja  t3.jinja  t38.jinja  t3_1.jinja  t43.jinja  t46.jinja  test.jinja  test.jinja.yaml  unmerge-paired-reads.sh  update_copyright_header.py
scripts/cmd/: rapidjson.cmd  rocksdb.cmd  smr.cmd  zlib.cmd
sortmerna-dev/: AUTHORS  Makefile.am  Makefile.in  configure
sortmerna-dev/alp/: gumbel_params.hpp  njn_approx.hpp  njn_doubletype.hpp  njn_dynprogprob.cpp  njn_dynprogprob.hpp  njn_dynprogproblim.hpp  njn_dynprogprobproto.hpp  njn_ioutil.cpp  njn_localmaxstatmatrix.cpp  njn_localmaxstatutil.hpp  njn_matrix.hpp  njn_memutil.hpp  sls_alp.hpp  sls_alp_data.cpp  sls_alp_data.hpp  sls_pvalues.cpp  sls_pvalues.hpp
sortmerna-dev/cmph/: bdz.c  chd.c  cmph_structs.c  fch.c  graph.c  hash.c  jenkins_hash.c  vqueue.c  vstack.c
sortmerna-dev/include/: bitvector.hpp  common.hpp  config.h.in  loadgenome.hpp  outputformats.hpp
sortmerna-dev/rRNA_databases/: silva-arc-23s-database-id98.fasta
sortmerna-dev/scripts/: merge-paired-reads.sh
sortmerna-dev/src/: bitvector.cpp  main.cpp
src/: alignment.cpp  bitvector.cpp  indexdb.cpp  kseq_load.cpp  load_index.cpp  main.cpp  mmap.cpp  outputformats.cpp  paralleltraversal.cpp  traverse_bursttrie.cpp
src/.deps/: bitvector.Po  indexdb.Po  main.Po  outputformats.Po  paralleltraversal.Po  ssw.Po
src/html/: annotated.html  bitvector_8cpp.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  indexdb_8cpp.html  main_8cpp.html  paralleltraversal_8cpp.html  ssw_8c.html  ssw__example_8c.html  struct__profile-members.html  struct__profile.html  structalignment__end-members.html  structalignment__end.html  structcigar-members.html  (+1 more)
src/indexdb/: CMakeLists.txt  indexdb.cpp
src/sortmerna/: CMakeLists.txt  alignment.cpp  bitvector.cpp  callbacks.cpp  cmd.cpp  gzip.cpp  index.cpp  indexdb.cpp  izlib.cpp  kseq_load.cpp  kvdb.cpp  load_index.cpp  main.cpp  minoccur.cpp  mmap.cpp  options.cpp  otumap.cpp  output.cpp  outputformats.cpp  paralleltraversal.cpp  processor.cpp  read.cpp  read_control.cpp  reader.cpp  readfeed.cpp  readsfile.cpp  readstats.cpp  references.cpp  refstats.cpp  report.cpp  report_biom.cpp  report_blast.cpp  report_denovo.cpp  report_fastx.cpp  report_fx_base.cpp  report_fx_other.cpp  report_sam.cpp  ssw.c  ssw_example.c  summary.cpp  (+3 more)
src/winapi/: CMakeLists.txt  unistd.cpp  wintime.cpp
src/winapi/include/: unistd.h
src/winapi/include/sys/: time.h
tests/: test.jinja.yaml  test_sortmerna.py  test_sortmerna_zlib.py
tests/sortmerna/: CMakeLists.txt  kvdb.cpp  main.cpp
winapi/: unistd.cpp
(+140 files in other folders)
